--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -44,14 +44,14 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:alpha="0"
-                    android:background="@drawable/custom_gradient_bg"
                     android:paddingLeft="10dp"
                     android:paddingTop="5dp"
                     android:paddingRight="10dp"
                     android:paddingBottom="5dp"
                     android:text="LIKE"
-                    android:textColor="@color/light_green"
-                    android:textSize="35sp" />
+                    android:textStyle="bold|italic"
+                    android:textColor="#2FFF00"
+                    android:textSize="45sp" />
 
                 <TextView
                     android:id="@+id/item_swipe_right_indicator"
@@ -60,14 +60,15 @@
                     android:layout_gravity="right"
                     android:layout_margin="10dp"
                     android:alpha="0"
-                    android:background="@drawable/custom_gradient_bg"
+                    android:background="#4BFFFFFF"
                     android:paddingLeft="10dp"
                     android:paddingTop="5dp"
                     android:paddingRight="10dp"
                     android:paddingBottom="5dp"
                     android:text="NOPE"
+                    android:textStyle="bold"
                     android:textColor="@color/red"
-                    android:textSize="35sp" />
+                    android:textSize="45sp" />
 
             </FrameLayout>
 
@@ -96,12 +97,12 @@
                     android:textSize="20sp" />
 
                 <ImageButton
-                    android:id="@+id/checkInfoBeforeMatched"
+                    android:id="@+id/checkinfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
                     android:background="@color/white"
-                    android:onClick="checkInfo"
+
                     android:src="@drawable/ic_baseline_info_32" />
 
             </LinearLayout>
