--- a/app/src/main/res/layout/matched_item.xml
+++ b/app/src/main/res/layout/matched_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="100dp"
         android:layout_gravity="center_vertical"
         android:paddingTop="10dp"
+        android:background="@drawable/userlogo"
         android:paddingBottom="10dp" />
 
     <TextView
@@ -20,6 +21,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
         android:layout_weight="1"
+        android:text="Name"
         android:textColor="@color/black"
         android:textSize="20sp" />
 
@@ -29,7 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="20dp"
-        android:background="@color/white"
+
+        android:background="@drawable/ic_baseline_videocam_32"
         android:focusable="false"
         />
 
