--- a/app/src/main/res/layout/activity_matched.xml
+++ b/app/src/main/res/layout/activity_matched.xml
@@ -30,7 +30,7 @@
                 android:textSize="20sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/matche_recycler_view"
+                android:id="@+id/match_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
