--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,37 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-  android:gravity="end">
-    <LinearLayout
-        android:layout_width="match_parent"
+    android:layout_width="300dp"
+    android:padding="8dp"
+    android:id="@+id/container"
+    android:layout_height="wrap_content">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/pt_ava"
+        android:src="@drawable/userlogo"/>
+
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10sp"
-        android:id="@+id/container">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/pt_ava"
-                android:layout_gravity="bottom"
-                android:background="@drawable/userlogo"/>
-            <TextView
-                android:gravity="center_vertical"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:text="Text"
-                android:textColor="@color/black"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:background="@drawable/receive_bg"
-                android:id="@+id/msg"/>
-        </LinearLayout>
+        android:layout_toRightOf="@id/pt_ava"
+        android:layout_marginLeft="5dp"
+        android:text="hello"
+        android:id="@+id/msg"
+        android:textSize="18sp"
+        android:padding="8dp"
+        android:background="@drawable/receive_bg"/>
 
-    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
