--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:weightSum="10"
-        tools:context=".MainActivity">
+        tools:context=".Activity.MainActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
