--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -30,6 +30,12 @@
             android:padding="8dp"
             android:layout_alignParentRight="true" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_seen"
+            android:visibility="gone"
+            android:layout_below="@id/msg"/>
 
 
     </RelativeLayout>
